--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ figcaption {
     display: none;
     position: absolute;
 
-    top: 30px;
+    top: 25px;
     left: -20px;
     width: 300px;
     text-align: left;
@@ -909,6 +909,16 @@ a {
 
 a:hover {
     color: #EA5060;
+}
+.splash-button {
+    position: relative;
+    top: 0;
+
+    transition: 0.5s;
+}
+.splash-button:hover {
+    color: #fff;
+    top: -4px;
 }
 
 a:not([class]) {
